--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,9 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
+# Program Folders
+results/
+
 # Unit test / coverage reports
 htmlcov/
 .tox/
