--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ pip-delete-this-directory.txt
 # Program Folders/Files
 treering_data_width.zip
 results/
+.pkl
 
 # Unit test / coverage reports
 htmlcov/
